--- a/src/styles/content/_header.scss
+++ b/src/styles/content/_header.scss
@@ -151,9 +151,7 @@
 .navbutton {
   @include flex(column);
   margin-right: 5vw;
-  row-gap: 1em;
   cursor: pointer;
-
 
   @include responsiveM{
     display: none;
@@ -164,6 +162,8 @@
   &.line {
    width: 3.5em;
    height: 3px;
+   margin-top: .5em;
+   margin-bottom: .5em;
    background-color: white;
    border-radius: 5px;
    transition: ease-in-out 0.3s;
@@ -173,6 +173,7 @@
    }
    &.second {
     opacity: 0;
+    
    }
    &.third {
     transform: translate(-5px, -23px) rotate(-45deg-180deg);
@@ -282,29 +283,31 @@
 
 
 .header-content-container {
-  @include flex(row);
-  padding: 120px 100px 0px 100px;
+  @include flex(row,flex-start);
+  padding: 120px 7vw 0px 7vw;
   font-family: 'Poppins', sans-serif;
   color: white;
-
+  height: auto;
+  
   @include responsive{
-    padding: 120px 50px 0px 50px;
+  
   }
 
   @include responsive2{
     @include flex(column);
-    row-gap: 3em;
+
     
   }
    
   .left-header-content {
     @include flex(column);
-   row-gap: 1em;
+    
 
 
 
    .introduction {
      font-size: 1.2rem;
+     margin-bottom: 2em;
  
      span {
        color: #FFC31D;
@@ -312,17 +315,20 @@
    }
    .profession {
      font-size: 3rem;
+     @include responsive4{
+      font-size: 2.5rem;
+     }
    }
     
    .home-icons {
     @include flex(row,left,center);
-    column-gap: 2em;
-    padding-top: 1em;
+    margin-top: 1.5em;
     
     .contact-me {
-      
+      margin-right: 2em;
       background-color: white;
       width: 100px;
+      min-width: 100px;  
       height: 25px;
       color: #272d3a;
       font-weight: 600;
@@ -401,6 +407,7 @@
       width: 30px;
       height: 30px;
       cursor: pointer;
+      margin-right: 2em;
       
       &.a {
         transform: rotate(18deg);     
@@ -454,12 +461,15 @@
  }
 
  .right-header-content {
- 
-  width: 90%;
-  @include flex(auto,auto,flex-start);
-
+  margin-top: 2em;
+  width: 100%;
+  @include flex(auto,top,top);
+  
+  
   .imageprofile {
+    object-fit: contain;
     width: 100%;
+    height: 80%;
    
  }
 }
